--- a/pom.xml
+++ b/pom.xml
@@ -310,6 +310,10 @@
         <xmlsec.version>2.1.4</xmlsec.version>
         <xpp3.bundle.version>1.1.4c_6</xpp3.bundle.version>
         <xstream.version>1.4.11.1</xstream.version>
+        <micrometer.version>1.5.1</micrometer.version>
+        <micrometer.hdrhistogram.version>2.1.12</micrometer.hdrhistogram.version>
+        <micrometer.latencyutils.version>2.0.3</micrometer.latencyutils.version>
+        <micrometer.prometheus-client.version>0.8.1</micrometer.prometheus-client.version>
         <zstd-jni.version>1.4.5-4</zstd-jni.version>
 
         <!-- Command line argument properties for the maven-surefire-plugin -->
