--- a/pom.xml
+++ b/pom.xml
@@ -200,10 +200,7 @@
         <httpmime.version>${httpclient.version}</httpmime.version>
         <jai-imageio-core.version>1.3.1</jai-imageio-core.version>
         <JavaAPIforKml.version>2.2.1_CODICE_1</JavaAPIforKml.version>
-        <jackson.version>2.9.10</jackson.version>
-        <!-- databind 2.9.10.1 fixes CVE-2019-16942, CVE-2019-16943, CVE-2019-17531.
-        This separate version can be removed when jackson.version is upgraded to a version newer than 2.9.10. -->
-        <jackson.databind.version>2.9.10.1</jackson.databind.version>
+        <jackson.version>2.10.4</jackson.version>
         <javax.annotation-api.version>1.3</javax.annotation-api.version>
         <javax.cache.version>1.1.1</javax.cache.version>
         <javax.cache.bundle.version>1.1.0_1</javax.cache.bundle.version>
@@ -382,9 +379,11 @@
                 <version>${ehcache.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-databind</artifactId>
-                <version>${jackson.databind.version}</version>
+                <groupId>com.fasterxml.jackson</groupId>
+                <artifactId>jackson-bom</artifactId>
+                <version>${jackson.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.codice.thirdparty</groupId>
