--- a/catalog/core/catalog-core-definitionparser/pom.xml
+++ b/catalog/core/catalog-core-definitionparser/pom.xml
@@ -104,6 +104,9 @@
                             !com.sun.management,
                             *
                         </Import-Package>
+                        <Export-Package>
+                            AttributeValidator
+                        </Export-Package>
                     </instructions>
                 </configuration>
             </plugin>
