turn off formatter for now

--- a/ui/package.json
+++ b/ui/package.json
@@ -13,7 +13,7 @@
     "format": "ace lint && ace format",
     "posttest": "ace pom",
     "prebuild": "ace clean --workspaces",
-    "build": "yarn format && ace set-env lerna run build",
+    "build": "ace set-env lerna run build",
     "postbuild": "ace gen-feature --exclude catalog-ui-search-e2e && yarn run build-fonts",
     "build-fonts": "yarn run clean-fonts && yarn run copy-fonts && npm rebuild node-sass && yarn run build-sass",
     "build-sass": "node-sass src/main/webapp/sass/ --output-style compressed -o src/main/resources/webapp/css/",
