DDF-5900 removed the use of security-core-impl from all non-security bundles

--- a/catalog/core/catalog-core-downloadaction/pom.xml
+++ b/catalog/core/catalog-core-downloadaction/pom.xml
@@ -58,6 +58,10 @@
             <artifactId>common-system</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
