--- a/platform/admin/core/admin-core-insecuredefaults/pom.xml
+++ b/platform/admin/core/admin-core-insecuredefaults/pom.xml
@@ -60,9 +60,12 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>ddf.security.core</groupId>
-            <artifactId>security-core-impl</artifactId>
-            <version>${project.version}</version>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.karaf.jaas</groupId>
+            <artifactId>org.apache.karaf.jaas.boot</artifactId>
         </dependency>
         <dependency>
             <groupId>ddf.lib</groupId>
