[2.20.x] Updates to the result architecture for performance (#6103)
* Removes duplicate processing and blacklists to increase performance

 - Simplifies views based on this update.
 - Updates the rearrange / visibility views for reuse downstream
 - Simplifies models based on this update

* Add chunked result processing

* Add waiting a few paint frames, turn off leading execution for update

* Simplify processing logic to only insert one free paint between processes, allow settings amount from window

* Adds dedupe of results outside models, turns off sorting for now

* add perf measurements to the dedupe

* Adds LazyQueryResult

 - A plain object that can be used immediately when a search returns, and that allows subscribing so that views can get access to a backbone model if they need one.

* Replace status with statusBySource on CqlQueryResponse

- Aggregate status by source using properties if multiple source ids are given.
- If only one source id is given, calculate the status the old way.
- All sources that are deemed "harvested" will be combined into a single query to save processing power on the client

* Bump version to new dev version (2.20.3-SNAPSHOT)

* turn off formatter for now

* Add admin-configurable sources (#6079)

* Update sort dropdowns to use React components (#6083)

* Remove deleted file imports

* Update deduping to check already processed results

* Fix sort dropdown ts errors (#6084)

* map mostly working, needs some updates to make sure selection is in sync

* Updates maps to be more performant

* Update query so a new response is used each time

 - Not sure why but if we don't do this, one more event triggers each search.  So perf will degrade over time.

* Adds sorting and filtering while expanding on LazyQueryResults

* Update map / results to work with the new way of selecting

 - Also fixed some bugs with the map, with clusters not rerendering on result change and billboards not upd

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <!--
 /**
  * Copyright (c) Codice Foundation
@@ -659,7 +659,8 @@
                     </executions>
                     <configuration>
                         <bottom>
-                            <![CDATA[This work is licensed under a <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License<a>.]]></bottom>
+                            <![CDATA[This work is licensed under a <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License<a>.]]>
+                        </bottom>
                         <failOnError>false</failOnError>
                         <show>protected</show>
                         <skip>false</skip>
