--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,7 @@
         <abdera.osgi.version>1.1.3_2</abdera.osgi.version>
         <abdera.version>1.1.3</abdera.version>
         <antlr.version>4.3</antlr.version>
-        <apache.shiro.version>1.4.2</apache.shiro.version>
+        <apache.shiro.version>1.5.3</apache.shiro.version>
         <asm.version>3.3.1</asm.version>
         <awaitility.version>3.1.5</awaitility.version>
         <aws-java-sdk-bundle.version>1.11.344_1</aws-java-sdk-bundle.version>
@@ -200,10 +200,7 @@
         <httpmime.version>${httpclient.version}</httpmime.version>
         <jai-imageio-core.version>1.3.1</jai-imageio-core.version>
         <JavaAPIforKml.version>2.2.1_CODICE_1</JavaAPIforKml.version>
-        <jackson.version>2.9.10</jackson.version>
-        <!-- databind 2.9.10.1 fixes CVE-2019-16942, CVE-2019-16943, CVE-2019-17531.
-        This separate version can be removed when jackson.version is upgraded to a version newer than 2.9.10. -->
-        <jackson.databind.version>2.9.10.1</jackson.databind.version>
+        <jackson.version>2.10.4</jackson.version>
         <javax.annotation-api.version>1.3</javax.annotation-api.version>
         <javax.cache.version>1.1.1</javax.cache.version>
         <javax.cache.bundle.version>1.1.0_1</javax.cache.bundle.version>
@@ -254,8 +251,9 @@
         <opengis.bundle.version>${opengis.version}_3</opengis.bundle.version>
         <opengis.version>20.1</opengis.version>
         <opensaml.osgi.version>3.3.0_2</opensaml.osgi.version>
-        <nimbus.version>8.2</nimbus.version>
-        <nimbus.oidc.version>6.18</nimbus.oidc.version>
+        <nimbus.version>8.14.1</nimbus.version>
+        <nimbus.oidc.version>8.3</nimbus.oidc.version>
+        <nimbus.content-type.version>2.0</nimbus.content-type.version>
         <nimbus.langtag.version>1.4.4</nimbus.langtag.version>
         <org.geotools.bundle.version>${org.geotools.version}_2</org.geotools.bundle.version>
         <org.geotools.version>20.1</org.geotools.version>
@@ -267,7 +265,7 @@
         <owasp-html-sanitizer.version>20191001.1</owasp-html-sanitizer.version>
         <ows-v_1_0_0-schema.version>1.1.0</ows-v_1_0_0-schema.version>
         <ogc-filter-v_1_1_0-schema.thirdparty.version>1.1.0_5</ogc-filter-v_1_1_0-schema.thirdparty.version>
-        <pac4j.version>3.8.2</pac4j.version>
+        <pac4j.version>4.0.1</pac4j.version>
         <pdfbox.version>2.0.11</pdfbox.version>
         <poi.version>4.0.1</poi.version>
         <xlsx.transformer.poi.version>4.1.1</xlsx.transformer.poi.version>
@@ -381,9 +379,11 @@
                 <version>${ehcache.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-databind</artifactId>
-                <version>${jackson.databind.version}</version>
+                <groupId>com.fasterxml.jackson</groupId>
+                <artifactId>jackson-bom</artifactId>
+                <version>${jackson.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.codice.thirdparty</groupId>
