--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,7 @@
         <dom4j.bundle.version>1.6.1_5</dom4j.bundle.version>
 
         <!--Test properties-->
+        <byte-buddy.version>1.6.14</byte-buddy.version>
         <hamcrest-all.servicemix.version>1.3_1</hamcrest-all.servicemix.version>
         <hamcrest-all.version>1.3</hamcrest-all.version>
         <hamcrest-junit.version>2.0.0.0</hamcrest-junit.version>
@@ -1109,7 +1110,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <!--Hamcrest first, then JUnit, then Mockito. See http://goo.gl/e5bJA5-->
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
             <version>${hamcrest-all.version}</version>
@@ -1122,9 +1122,25 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <!-- Mockito runtime dependency -->
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>${byte-buddy.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <!-- Mockito runtime dependency -->
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy-agent</artifactId>
+            <version>${byte-buddy.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <!-- Mockito runtime dependency -->
             <groupId>org.objenesis</groupId>
             <artifactId>objenesis</artifactId>
             <version>${objenesis.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
