--- a/catalog/solr/catalog-solr-defaultmetacardtagscacheplugin/pom.xml
+++ b/catalog/solr/catalog-solr-defaultmetacardtagscacheplugin/pom.xml
@@ -11,13 +11,12 @@
  *
  **/ -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>plugin</artifactId>
-        <groupId>ddf.catalog.plugin</groupId>
+        <artifactId>catalog-solr</artifactId>
+        <groupId>ddf.catalog.solr</groupId>
         <version>2.25.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>catalog-solr-defaultmetacardtagscacheplugin</artifactId>
     <name>DDF :: Catalog :: Solr :: Cache Put Plugin :: Default Metacard Tags</name>
     <packaging>bundle</packaging>
